# hakoniwa-ros2pdu

./: .gitignore  .gitmodules  AGENTS.md  README-new.md  README-srv-ja.md  README-srv.md  README.md  build_mros2proxy.bash  create_all_pdus.bash  create_all_pdus_fast.bash  create_pdu_ctypes.bash  create_pdu_ctypes_offset.bash  create_proxy.bash  create_proxy_ros_zenoh.bash  read_pdu.bash  run_tests.bash  sync-pdu-data.bash  write_pdu.bash
config/: RosTopics.json  custom.json  custom_shm.json  local_search_path.txt  ros_msgs.txt  search_path.txt  test_cases.json  test_ros_msgs.txt  varray_size.json
docker/: Dockerfile  create-image.bash  image_name.txt  run.bash
pdu/csharp/builtin_interfaces/: Time.cs
pdu/csharp/can_msgs/: HakoCan.cs  HakoCanBody.cs  HakoCanHead.cs
pdu/javascript/: package.json  pdu_utils.js
pdu/python/: pdu_utils.py
pdu/types/: pdu.hpp  pdu_convertor.hpp  pdu_data_packet.hpp  pdu_dynamic_memory.hpp  pdu_primitive_ctypes.h  pdu_primitive_ctypes_conv.hpp  ros_primitive_types.hpp
pdu_test/js/: HakoCameraData.json  PoseWithCovariance.json  SimpleVarray.json  Twist.json  js_test_result.json  run_js_tests.bash  test_types.txt  test_worker.js
template/: app_cpp.tpl  example-pdu-def.csv  hako_pdu_proxy_com_pub_cpp.tpl  hako_pdu_proxy_com_sub_cpp.tpl  pdu-template.csv  pdu_cpptypes_conv_cpp.tpl  pdu_cpptypes_hpp.tpl  pdu_csharp_class.tpl  pdu_ctypes_conv_cpp.tpl  pdu_ctypes_conv_mavlink_cpp.tpl  pdu_ctypes_h.tpl  pdu_ctypes_offset_c.tpl  pdu_js_conv_js.tpl  pdu_jstypes_js.tpl  pdu_py_conv_py.tpl  pdu_pytypes_py.tpl
template/mros2-patch/: CMakeLists.txt  lwip.c  stats.c
template/ros_zenoh/: hako_pdu_proxy_com_ros2_cpp.tpl  hako_pdu_proxy_com_zenoh_cpp.tpl
utils/: convert_offset2txt.bash  create_pdudef.py
utils/binary/: binary_io.py  binary_reader.py  binary_writer.py  offset_parser.py
utils/generate_hako_service_msgs/: common.py  main.py  msg_generator.py  msg_writer.py  service_context.py  srv_parser.py
utils/hakoniwa_pdu_generator/: code_generator.py  dependency_resolver.py  main.py  offset_calculator.py  offset_parser.py  ros_message_parser.py
utils/ros_json/: convert_rosmsg2json.bash  rosmsg2json.py
utils/ros_types/: msg_types.txt  parse_msg.bash
utils/template_engine/: generate.py  generate_proxy.py
workspace/: build.bash  clean.bash
workspace/src/msg_conv_test/: CMakeLists.txt  package.xml
workspace/src/msg_conv_test/src/: msg_conv_test.cpp
workspace/test/cpp/: CMakeLists.txt  generate_and_validate_pdu.cpp
(+1671 files in other folders)
